syntax = "proto3";

option csharp_namespace = "order_service";

package order;

service Order {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderReply);
  rpc CancelOrder (CancelOrderRequest) returns (CancelOrderReply);
  rpc Approve (ApproveRequest) returns (ApproveReply);
}

// The request message containing the user's name.
message CreateOrderRequest {
  string customerName = 1;
  string goodsName = 2;
  int64 amount = 3;
}

// The response message containing the greetings.
message CreateOrderReply {
  bool success = 1;
  string message = 2;
  string orderId = 3;
}

message CancelOrderRequest {
	string orderId = 1;
}

message CancelOrderReply {
	bool success = 1;
	string message = 2;
}

message ApproveRequest {
  string orderId = 1;
}

message ApproveReply {
  bool success = 1;
  string message = 2;
}
